# ProofStack-api

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: build.yml  ghcr-test.yml
src/: manage.py
src/apps/auth/models/: base.py
src/apps/core/models/: abc.py
src/apps/profile/: apps.py
src/apps/profile/models/: abc.py  base.py
src/proofstack/: asgi.py  urls.py  wsgi.py
src/proofstack/settings/: base.py  prod.py
